# wokjab

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  configure.in  install.ubuntu.txt  wokjab.cbp
plugins/: Makefile.am  Makefile.in
plugins/Authorization/: Makefile.am  Makefile.in  auth.cc  auth.h  main.cc
plugins/AutoJoinGroupChat/: AutoJoin.cc  AutoJoin.h  AutoJoinWid.cc  AutoJoinWid.glade  AutoJoinWid.h  Makefile.am  Makefile.in  main.cc
plugins/AutoPresence/: Makefile.am  Makefile.in
plugins/Config/: Config.cc  Config.h  Makefile.am  Makefile.in  defaultconfig.xml  main.cc
plugins/CrashManager/: Makefile.am  Makefile.in  c-m-g-u-i.cpp  c-m-g-u-i.hpp  cmgui.glade  crash-manager.cpp  crash-manager.hpp  main.cc
plugins/DisplayGtk/: Makefile.am  Makefile.in  displaygtk.glade  displaygtk.inputdialog.glade  displaygtk.signalgen.glade
plugins/EventManager/: Makefile.am  Makefile.in  event-manager.cpp  event-manager.hpp  main.cpp
plugins/EventSound/: Makefile.am  Makefile.in  Sound.cc  Sound.h  main.cc
plugins/Fileshare/: Download.cc  Download.h  File.cc  File.h  FileListWid.cc  FileListWid.glade  FileListWid.h  FileShare.cc  FileShare.h  Makefile.am  Makefile.in  SearchWid.cc  SearchWid.glade  SearchWid.h  download-queue.cpp  download-queue.hpp  main.cc
plugins/GPGenc/: Makefile.am  Makefile.in  g-p-genc.cpp  g-p-genc.hpp  main.cc
plugins/GUIRoster/: GUIRoster.cc  GUIRoster.glade  GUIRoster.h  Makefile.am  Makefile.in  RosterItem.cc  RosterItem.h  main.cc
plugins/GnomeStatusIcon/: Makefile.in
plugins/GroupChatBookmark/: MUCBookmark.cc  MUCBookmark.h  Makefile.am  Makefile.in  main.cc
plugins/GroupManager/: Makefile.am  Makefile.in  g-m-widget.cpp  g-m-widget.hpp  group-manager.cpp  group-manager.glade  group-manager.hpp  main.cc
plugins/Gtk-jep0060-PublishSubscribe/: Makefile.am  Makefile.in  main.cpp  pub-sub-manager.cpp  pub-sub-manager.hpp  pub-sub-widget.cpp  pub-sub-widget.hpp  pubsub.glade
plugins/GtkMenu/: Makefile.am  Makefile.in  gtkmenu.cc  gtkmenu.h  main.cc
plugins/GtkPreference/: GtkPBool.cc  GtkPBool.h  GtkPCommon.cc  GtkPCommon.h  GtkPPassword.cc  GtkPPassword.h  GtkPString.cc  GtkPString.h  GtkPText.cc  GtkPText.h  GtkPreference.cc  GtkPreference.h  Makefile.am  Makefile.in  jid-list.cpp  jid-list.hpp  main.cc  preference.jidlist.glade
plugins/GtkTimer/: Makefile.am  Makefile.in
plugins/History.SQLite/: Makefile.am  Makefile.in  history.cpp  history.hpp  main.cc
plugins/HtmlLinkMessage/: Makefile.am  Makefile.in  html-link.cpp  html-link.hpp  main.cc
plugins/Idle/: Idle.cc  Idle.h  IdleSession.cc  IdleSession.h  Makefile.am  Makefile.in  main.cc
plugins/Jabber/: IQSetRoster.cc  IQSetRoster.h  Jabber.h  Makefile.am  Makefile.in  MessageHook.cc  MessageHook.h  Presence.cc  Presence.h
plugins/JabberConnection/: Connection.cc  Connection.h  IQAuthManager.cc  IQ_auth.cc  IQauth.h  Jabber.cc  Jabber.h  Makefile.am  Makefile.in  SSL.cc  SSL.h  XML_Input.cc  XML_Input.h  XML_Output.cc  XML_Output.h  main.cc
plugins/JabberRoster/: Group.cc  Group.h  JabberRoster.cc  JabberRoster.h  JabberSession.cc  JabberSession.h  Makefile.am  Makefile.in  User.cc  User.h  main.cc
plugins/MenuResource/: Makefile.am  Makefile.in  MenuResource.cc  MenuResource.h  main.cc
plugins/MenuRoster/: Makefile.am  Makefile.in  MenuRoster.cc  MenuRoster.h  main.cc
plugins/OpenDialogTo/: Makefile.am  Makefile.in  dialogopener.glade  dopener.cc  dopener.h  main.cc  opener.cc  opener.h
plugins/P2PRandomNumber/: Makefile.am  Makefile.in  main.cpp  rand.cpp  rand.hpp  session.cpp  session.hpp
plugins/Reversi/: Game.cc  Game.h  Makefile.am  Makefile.in  ReversiHandler.cc  ReversiHandler.h  jabberreversi.glade  main.cc
plugins/RosterEvent/: Makefile.am  Makefile.in  main.cpp  roster-event.cpp  roster-event.glade  roster-event.hpp
plugins/ScriptLoader/: Makefile.am  Makefile.in  ScriptLoader.cc  ScriptLoader.h  main.cc  scriptloader.glade
plugins/Tooltip/: Makefile.am  Makefile.in  Tooltip.cc  Tooltip.h  tooltip.glade
plugins/dbus/: Makefile.am  Makefile.in  WLDbus.cc  WLDbus.h  main.cc  w-l-dbushook.cpp  w-l-dbushook.hpp  wokjab-dbus-glue.h  wokjab.xml
plugins/experimental/: Makefile.am  Makefile.in
plugins/groupchat-plugin/: Makefile.am  Makefile.in  groupchatjoin.glade
plugins/guibrowser/: Makefile.in
plugins/jep0004-xdata/: Makefile.in
plugins/jep0030-Disco/: Disco.cc  Disco.h  Makefile.am  Makefile.in  main.cc
plugins/jep0050-AdHocCommands/: AdHoc.cc  AdHoc.h  AdHocSession.cc  AdHocSession.glade  AdHocSession.h  AdHocWid.cc  AdHocWid.glade  AdHocWid.h  Makefile.am  Makefile.in  main.cc
plugins/jep0050-AdHocCommands-Manager/: AdHocManager.cc  AdHocManager.h  Makefile.am  main.cc
plugins/jep0060-PublishSubscribe/: Makefile.am  Makefile.in  main.cpp  pub-sub.cpp  pub-sub.hpp
plugins/jep0065-Bytestream/: Makefile.in
plugins/jep0096-Filetransfear/: Makefile.am  Makefile.in  filepicker.glade  streams.glade
plugins/jep0115-EntCap/: EntCap.cc  EntCap.h  Makefile.am  Makefile.in  main.cc
plugins/jep0118-UserTune/: Makefile.am  Makefile.in  main.cpp  user-tune.cpp  user-tune.hpp
plugins/jep0153-VCardAvatar/: Makefile.am  Makefile.in  User.cc  User.h  VCardAvatar.cc  VCardAvatar.h  main.cc  vcardavatar.glade
plugins/jep0163-PEP/: Makefile.am  Makefile.in  main.cpp  p-e-p-manager.cpp  p-e-p-manager.glade  p-e-p-manager.hpp  p-e-p-user.cpp  p-e-p-user.hpp  p-e-p-widget.cpp  p-e-p-widget.hpp
plugins/normal/: Makefile.am  Makefile.in
plugins/python/: Makefile.am  Makefile.in  PyScript.cc  PyScript.h  PySig.cc  PySig.h  PyWXMLTag.cc  PyWXMLTag.h  WokPython.cc  WokPython.h  main.cc
plugins/registerservice/: Makefile.in
plugins/rfc1928-SOCKS5/: Makefile.am  Makefile.in  Socks5.cc  Socks5.h  Socks5Session.cc  Socks5Session.h  main.cc  socks5-host-session.cpp  socks5-host-session.hpp  socks5-host.cpp  socks5-host.hpp
plugins/roster-rename/: Makefile.in
plugins/system/: Makefile.in
plugins/toaster/: Makefile.am  Makefile.in  ToasterWindow.cc  ToasterWindow.h  main.cc  (+2 more)
(+379 files in other folders)
