#
#  Copyright (C) 2003-2006  Kent Gustavsson <nedo80@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Library General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.


AC_INIT(wokjab/src/main.cc)
AM_INIT_AUTOMAKE(wokjab,0.0.5)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PATH_GTK_2_0
AM_PROG_LIBTOOL

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  prefix=${ac_default_prefix}
#else
#  prefix=${prefix}
fi


AC_DEFINE_UNQUOTED([PACKAGE_DATA_DIR], ["${prefix}/share"], ["Due to growing insanity I dont do this the proper way I think, Anyways the pixmap dir"])
AC_DEFINE_UNQUOTED([PACKAGE_PLUGIN_DIR], ["${prefix}/lib/woklib-plugins"], ["Where the system plugins gets stored"])
AC_DEFINE_UNQUOTED([PACKAGE_GLADE_DIR], ["${prefix}/lib/woklib/glade"], ["Where the system UI gets stored"])


AC_OUTPUT(Makefile \
	plugins/Makefile  \
	plugins/MenuResource/Makefile  \
	plugins/MenuRoster/Makefile  \
	plugins/GnomeStatusIcon/Makefile  \
	plugins/GnomeStatusIcon/src/Makefile  \
	plugins/GnomeStatusIcon/include/Makefile  \
	plugins/GtkTimer/Makefile  \
	plugins/GtkTimer/src/Makefile  \
	plugins/GtkPreference/Makefile  \
	plugins/GtkMenu/Makefile  \
        plugins/GUIRoster/Makefile  \
	plugins/OpenDialogTo/Makefile  \
	plugins/wokjab-jid-info/Makefile  \
	plugins/wokjab-jid-info/src/Makefile  \
	plugins/wokjab-jid-info/include/Makefile  \
	plugins/roster-rename/Makefile  \
	plugins/roster-rename/src/Makefile  \
	plugins/guibrowser/Makefile  \
	plugins/guibrowser/src/Makefile  \
	plugins/registerservice/Makefile  \
	plugins/registerservice/src/Makefile  \
        plugins/rfc1928-SOCKS5/Makefile  \
	plugins/DisplayGtk/Makefile  \
	plugins/DisplayGtk/src/Makefile  \
	plugins/Config/Makefile  \
	plugins/Authorization/Makefile  \
	plugins/AutoPresence/Makefile  \
	plugins/woklib-groupchat/Makefile  \
	plugins/woklib-groupchat/src/Makefile  \
	plugins/woklib-groupchat/include/Makefile  \
	plugins/groupchat-plugin/Makefile  \
	plugins/groupchat-plugin/src/Makefile  \
	plugins/groupchat-plugin/glade/Makefile  \
	plugins/groupchat-plugin/images/Makefile  \
	plugins/Reversi/Makefile  \
	plugins/Reversi/pixmaps/Makefile  \
	plugins/EventSound/Makefile  \
	plugins/toaster/Makefile  \
	plugins/Tooltip/Makefile  \
	plugins/python/Makefile  \
        plugins/python/preloader/Makefile  \
	plugins/ScriptLoader/Makefile  \
        plugins/Jabber/Makefile  \
        plugins/JabberConnection/Makefile  \
        plugins/JabberRoster/Makefile  \
	plugins/jep0004-xdata/Makefile  \
	plugins/jep0004-xdata/src/Makefile  \
	plugins/jep0004-xdata/include/Makefile  \
	plugins/jep0030-Disco/Makefile  \
        plugins/jep0050-AdHocCommands/Makefile  \
	plugins/jep0065-Bytestream/Makefile \
	plugins/jep0065-Bytestream/src/Makefile  \
        plugins/jep0065-Bytestream/src/rfc1928-SOCKS5/Makefile  \
	plugins/jep0096-Filetransfear/Makefile \
	plugins/jep0096-Filetransfear/src/Makefile \
	plugins/jep0115-EntCap/Makefile  \
        plugins/jep0153-VCardAvatar/Makefile  \
        plugins/Idle/Makefile  \
	wokjab/Makefile \
	wokjab/src/Makefile \
	wokjab/include/Makefile \
	wokjab/pixmaps/Makefile \
	wokjab/glade/Makefile \
)
