#
#  Copyright (C) 2003-2006  Kent Gustavsson <nedo80@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Library General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

if DO_PYTHON
pythondir = python
endif

SUBDIRS= \
	Authorization \
	AutoPresence \
	Config \
	DisplayGtk \
	EventSound \
	Fileshare \
	GnomeStatusIcon \
	groupchat-plugin \
	GtkTimer \
	GtkPreference \
	GtkMenu \
	guibrowser \
	GUIRoster \
	Jabber \
	JabberConnection \
	JabberRoster \
	jep0004-xdata \
	jep0030-Disco \
	jep0050-AdHocCommands \
	jep0065-Bytestream \
	jep0096-Filetransfear \
	jep0115-EntCap \
	jep0153-VCardAvatar \
	MenuResource \
	MenuRoster \
	OpenDialogTo \
	$(pythondir) \
	registerservice \
	Reversi \
	roster-rename \
	ScriptLoader \
	toaster \
	Tooltip \
	wokjab-jid-info \
	woklib-groupchat \
	rfc1928-SOCKS5 \
	Idle \
	GroupChatBookmark \
	Fileshare \
	AutoJoinGroupChat \
	dbus \
	RosterEvent \
	GroupManager


