AM_CXXFLAGS = -lwoklib

libdir = $(prefix)/lib/woklib-plugins/normal

lib_LTLIBRARIES = \
	libjabber.la 

libjabber_la_SOURCES = \
	main.cc       \
	Jabber.cc       \
	Jabber.h       \
	IQHandler.cc       \
	IQHandler.h       \
	IQSetRoster.cc       \
	IQSetRoster.h       \
	MessageHook.cc       \
	MessageHook.h       \
	Presence.h       \
	Presence.cc 

## File created by the gnome-build tools


