libdir = $(prefix)/lib/woklib-plugins/normal

lib_LTLIBRARIES = \
	libjabberroster.la 

libjabberroster_la_SOURCES = \
	main.cc             \
	JabberRoster.cc             \
	JabberRoster.h             \
	JabberSession.h             \
	JabberSession.cc             \
	User.cc             \
	User.h             \
	Group.cc             \
	Group.h 

## File created by the gnome-build tools


