INCLUDES =
libdir = $(prefix)/lib/woklib-plugins/normal


lib_LTLIBRARIES = \
	librfc1928-SOCKS5.la 

librfc1928_SOCKS5_la_SOURCES = \
	main.cc               \
	Socks5.cc               \
	Socks5.h               \
	Socks5Session.cc               \
	Socks5Session.h 

## File created by the gnome-build tools


