AM_CXXFLAGS = -lwoklib


INCLUDES =
libdir = $(prefix)/lib/woklib-plugins/normal


lib_LTLIBRARIES = \
	librfc1928-SOCKS5.la 

librfc1928_SOCKS5_la_SOURCES = \
	main.cc               \
	Socks5.cc               \
	Socks5.h               \
	Socks5Session.cc               \
	Socks5Session.h               \
	socks5-host.hpp               \
	socks5-host.cpp               \
	socks5-host-session.hpp               \
	socks5-host-session.cpp

## File created by the gnome-build tools


